# TIKI_TAKA_TOE

./: .gitattributes  LICENSE.txt  README.md
AutomationScripts/: README.md
AutomationScripts/MusicGenerator/: mp3ToWav.py
AutomationScripts/NamesParsing/: Names.txt  default_database.txt  parsing.py
Client/: README.md
Server/GoogleTests/: README.md  test_database.cpp  test_footballer.cpp
Server/src/communication/: communication.cpp  server.cpp
Server/src/database/: database.cpp  footballer.h  parameters.h
Server/src/database/files/: game_test_database.txt  test_database.txt
Server/src/gamelogic/: game.cpp  game.h  gameRunner.h
Server/src/player/: player.cpp  player.h
TechSpikes/: Readme.md
TechSpikes/Chat/: client.cpp
TechSpikes/ServerClientJava/src/: Client.java
TechSpikes/ServerJavaTest/src/Communication/: Communication.java
a01_1-master/AutomationScripts/ImageResizer/: Resize.py
a01_1-master/AutomationScripts/MusicGenerator/: music_Concatenator.py  music_Downloader.py
a01_1-master/Client/: pom.xml
a01_1-master/Server/: CMakeLists.txt  Main.cpp  README.md
a01_1-master/Server/Executable/: Server
a01_1-master/Server/GoogleTests/: test_board.cpp  test_game.cpp
a01_1-master/Server/src/communication/: communication.h  server.h
a01_1-master/Server/src/database/: database.h  footballer.cpp
a01_1-master/Server/src/database/files/: default_database.txt
a01_1-master/Server/src/gamelogic/: board.cpp  board.h  gameRunner.cpp
a01_1-master/TechSpikes/Chat/: client2.cpp  server.cpp
a01_1-master/TechSpikes/Gui/: pom.xml
(+33 files in other folders)
